<resources>
    <string name="app_name">Big O</string>
    <string name="action_settings">Settings</string>
    <string name="email_header">Email</string>
    <string name="email_address">Email Address</string>
    <string name="email_subject">Email Subject</string>
    <string name="complexity_header">Complexity</string>
    <string name="tree_23">2-3 Tree</string>
    <string name="tree_binary_search">Binary Search Tree</string>
    <string name="table_hash">Hash Table</string>
    <string name="list_linked">Linked List</string>
    <string name="heap_min">Min Heap</string>
    <string name="data_structure">Data Structure</string>
    <string name="operations">Operations</string>
    <string name="get_min">Get Min</string>
    <string name="insert">Insert</string>
    <string name="search">Search</string>
    <string name="case_header">Case</string>
    <string name="case_average">Average Case</string>
    <string name="case_worst">Worst Case</string>
    <string name="result">Result</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="menu_compose">menu_compose</string>

</resources>
